# android-ndk-demo

./: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
app/: README.md  build.gradle
app/src/androidTest/java/com/packcheng/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  class_operate.cpp  dynamic_method.cpp  dynamic_method.h  jni-root.cpp  my-jni.h  native_thread.cpp  product_consumer.cpp  static-link.cpp
app/src/main/cpp/T1/: T1.cpp  T1.h
app/src/main/cpp/T2/: T2.cpp  T2.h
app/src/main/cpp/T3/: T3.cpp  T3.h
app/src/main/cpp/T4/: DParcel.cpp  DParcel.h
app/src/main/java/com/packcheng/ndkdemo/: App.java  BaseActivity.java  MainActivity.java  MainActivity2.java  TemperActivity.java
app/src/main/java/com/packcheng/ndkdemo/jni/: ClassOperate.java  DynamicLink.java  JniRoot.java  NativeThread.java  ProductConsumer.java  StaticLink.java
app/src/main/java/com/packcheng/ndkdemo/t1/: T1.java  T1Activity.java
app/src/main/java/com/packcheng/ndkdemo/t2/: T2.java  T2Activity.java
app/src/main/java/com/packcheng/ndkdemo/t3/: T3.java  T3Activity.java
app/src/main/java/com/packcheng/ndkdemo/t4/: DParcel.java  T4Activity.java
app/src/main/java/com/packcheng/ndkdemo/util/: LogUtil.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_t1.xml  activity_t2.xml  activity_t3.xml  activity_t4.xml  activity_temp.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/packcheng/ndkdemo/: ExampleUnitTest.java
base/: build.gradle
base/src/androidTest/java/com/packcheng/base/: ExampleInstrumentedTest.java
base/src/main/: AndroidManifest.xml
base/src/main/java/com/packcheng/base/: BaseActivity.java  LogUtil.java
base/src/main/res/values/: dimens.xml
base/src/test/java/com/packcheng/base/: ExampleUnitTest.java
cmake/: build.gradle
cmake/src/androidTest/java/com/packcheng/cmake/: ExampleInstrumentedTest.java
cmake/src/main/: AndroidManifest.xml  CMakeLists.txt
cmake/src/main/cpp/: my-jni.h  native_lib.cpp
cmake/src/main/cpp/lib_action/: CMakeLists.txt  action.h  divider_action.cpp  multiply_action.cpp  plus_action.cpp  subtract_action.cpp
cmake/src/main/cpp/lib_get/: CMakeLists.txt  get.h  get_add_5.c  get_multiply_3.c
cmake/src/main/java/com/packcheng/cmake/: MainActivity.java  MyNative.java
cmake/src/main/res/layout/: activity_main.xml
cmake/src/test/java/com/packcheng/cmake/: ExampleUnitTest.java
ffmpeg/: FFMpeg.md  build_ffmpeg.sh  ffmpeg_help.txt
fmode/: README.md  build.gradle
fmode/src/androidTest/java/com/packcheng/fmode/: ExampleInstrumentedTest.java
fmode/src/main/: AndroidManifest.xml
fmode/src/main/cpp/: CMakeLists.txt  my-fmode.cpp  my-fmode.h
fmode/src/main/java/com/packcheng/fmode/: FModePlayer.java  FmodeActivity.java
fmode/src/main/res/layout/: activity_fmode.xml
fmode/src/main/res/values/: strings.xml
fmode/src/test/java/com/packcheng/fmode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
linux/: README.md  file1.txt  file_operator.sh  flow.sh  packing.sh  paramter.sh
mylib/: README.md  build.gradle
mylib/prebuild/code/: dynamic.c  dynamic.h  static.c
mylib/prebuild/sh/: pack_dynamic.sh  pack_static.sh
mylib/src/androidTest/java/com/packcheng/mylib/: ExampleInstrumentedTest.java
mylib/src/main/: AndroidManifest.xml
mylib/src/main/cpp/: CMakeLists.txt  mylib.cpp
mylib/src/main/cpp/mylib/: static.h
mylib/src/main/java/com/packcheng/mylib/: MainActivity.java  NativeLib.java
mylib/src/main/res/layout/: activity_main.xml
mylib/src/test/java/com/packcheng/mylib/: ExampleUnitTest.java
